*Update* HOME PAGE ANIMATIONS : Added Menus preview zoom and decrease in opacity transition !!! Texts become blurry and make a little movement in Chrome because of this transition -> Searched a fix but the ones found don't work in my case...

--- a/sass/layouts/_home.scss
+++ b/sass/layouts/_home.scss
@@ -20,7 +20,6 @@ main {
         justify-content: center;
         flex-direction: column;
         align-items: center;
-
       }
 
       h2 {
@@ -170,6 +169,17 @@ main {
         flex-basis: 35%;
         height: 470px;
         margin-bottom: 75px;
+
+        a {
+          transition: all 400ms;
+          -webkit-font-smoothing: antialiased;
+          backface-visibility: hidden;
+
+          &:hover {
+            opacity: 0.7;
+            transform: scale(1.29) translate3d(0,0,0);
+          }
+        }
       }
     }
 
